Fix title page has small horizontal overflow on mobile

--- a/docs/_sass/overrides.scss
+++ b/docs/_sass/overrides.scss
@@ -1,3 +1,7 @@
+html, body {
+    overflow-x: hidden;
+}
+
 h1,
 h2,
 h3,
@@ -21,10 +25,6 @@ blockquote {
     &>:last-child {
         margin-bottom: 0;
     }
-}
-
-body {
-    overflow-x: hidden;
 }
 
 .page-wrap {
